--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5"
   },
