--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -35,12 +35,12 @@ jobs:
           if-no-files-found: error
           path: ./reports/html-report/jest-html-reporters-attach
 
-      - name: Run tests coverage
-        run: npm run test:coverage
-        continue-on-error: true
-      - name: Upload coverage
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          if-no-files-found: error
-          path: ./coverage
+      # - name: Run tests coverage
+      #   run: npm run test:coverage
+      #   continue-on-error: true
+      # - name: Upload coverage
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: coverage
+      #     if-no-files-found: error
+      #     path: ./coverage
