--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -17,17 +17,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version}}
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build package
         run: npm run build --if-present
+
       - name: Run tests
         run: npm run test
+
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
@@ -35,12 +40,13 @@ jobs:
           if-no-files-found: error
           path: ./reports/html-report
 
-      # - name: Run tests coverage
-      #   run: npm run test:coverage
-      #   continue-on-error: true
-      # - name: Upload coverage
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: coverage
-      #     if-no-files-found: error
-      #     path: ./coverage
+      - name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: -1002222484539
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            ${{ github.actor }} created commit:
+            Commit message: ${{ github.event.commits[0].message }}
+            Repository: ${{ github.repository }}
+            See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
