--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -3,9 +3,22 @@ name: CI Full Tests for new branch
 on:
   workflow_dispatch:
   push:
-    branches: ['main', 'CI/CD-task', 'CI/CD-Task']
+    branches:
+      - 'main'
+      - 'CI/CD-task'
+      - 'CI/CD-Task'
   pull_request:
-    branches: ['main']
+    branches:
+      - 'main'
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -13,7 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version:
+          - '18.x'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -40,7 +54,7 @@ jobs:
           if-no-files-found: error
           path: ./reports/html-report
 
-      - name: send telegram message on push
+      - name: Send telegram message on push
         uses: appleboy/telegram-action@master
         with:
           to: -1002222484539
@@ -51,6 +65,6 @@ jobs:
             Repository: ${{ github.repository }}
             See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
 
-          -name: Deploy to Github
-          id: deployment
-          uses: action-deploy-page@v1
+      - name: Deploy to Github
+        id: deployment
+        uses: action-deploy-page@v1
