--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          to: -1002222484539
+          to:  ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             ${{ github.actor }} created commit:
