--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -65,6 +65,6 @@ jobs:
             Repository: ${{ github.repository }}
             See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
 
-      - name: Deploy to Github
+      - name: Deploy to github pages
         id: deployment
-        uses: action/deploy-page@v1
+        uses: action/deploy-page@v3
