--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - '21.x'
+          - '18.x'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -67,4 +67,4 @@ jobs:
 
       - name: Deploy to github pages
         id: deployment
-        uses: action/deploy-pages@v3
+        uses: action/github-pages-deploy-action@v3
