--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/preset-env": "^7.24.4",
     "@faker-js/faker": "^8.4.1",
     "@jest/types": "^29.6.3",
+    "@playwright/test": "^1.44.1",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.8",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
