ui тесты для wb

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,10 @@
 reports
 build
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
