--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,9 @@
 reports
 build
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
