--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ build
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
