--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [main, master]
+  # push:
+  #   branches: [CI/CD-Task, UI-Task]
   pull_request:
-    branches: [main, master]
+    branches: [CI/CD-Task, UI-Task]
 jobs:
   test:
     timeout-minutes: 60
